2000-05-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acinclude.m4: Typo...

2000-05-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/gpstolfp.c (GPSORIGIN): Try new ULONG_CONST macro

	* ntpdate/ntptimeset.c: 
	* ntpdate/ntpdate.h: 
	* ntpd/refclock_oncore.c (oncore_msg_En): 
	* ntpd/ntp_util.c (stats_config): 
	* ntpd/ntp_request.c: 
	* ntpd/ntp_intres.c (findhostaddr): 
	* ntpd/ntp_config.c (getconfig): 
	* libntp/systime.c (adj_systime): 
	* libntp/lib_strbuf.c: 
	* libntp/authparity.c: 
	* libntp/audio.c:
	Header/lint cleanup
	From/reported by: Simon Burge <simonb@netbsd.org>

	* ntpd/ntp_resolver.c (findhostaddr): Compiler noise cleanup

	* ntpd/ntp_intres.c: Compiler noise cleanup

	* html/ntptime.htm: Document reality check
	From: Kazu TAKAMUNE <takamune@avrl.mei.co.jp>

2000-05-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_intres.c (ntp_intres): Quiet some debug messages
	Reported by: Brian Bergstrand <brianb@mac.com>

2000-05-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/mkver.in (ConfStr): Use -r if we're using RSAREF,
	otherwise use -a if we're using autokey, otherwise use no extra
	suffix.

2000-05-11  Sven Dietrich  <sven_dietrich@trimble.com>

	* ports/winnt/include/config.h: New defines to support AUTOKEY
	* ports/winnt/include/unistd.h: Added another dummy placeholder.h
	* ports/winnt/ntpd/ntpd.dsp: Added ntp_crypt.c to makefile
	* ports/winnt/ntpd/ntpd.c: service_main needs a local hostname[]
	* html/hints/winnt.htm: Add remark about 4.0.99i not compiling.
	These changes got WINNT running again. No idea if the keys stuff
	works however.

2000-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i9

	* ntpd/ntp_crypto.c: tstamp and autokey cleanup
	From: Dave Mills

	* ntpd/ntp_proto.c (clock_update): Only call expire_all() if
	AUTOKEY
	From many folks, including Reg Clemens <reg@dwf.com>

2000-05-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i8

	* flock-build: Use new --with-crypto choices