@@ -1,3 +1,13 @@
+2000-05-15  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* include/ntp_stdlib.h: 
+	* libntp/systime.c (adj_systime): 
+	* ntpd/ntp_loopfilter.c (loop_config): 
+	* ntpd/ntp_util.c (stats_config): 
+	* ports/winnt/ntpd/nt_clockstuff.c (adj_systime): 
+	sys_maxfreq -> MAXFREQ
+	Per Dave Mills.
+
 2000-05-14  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* acinclude.m4: Typo...
